--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,6 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
       - dev
     tags:
       - 'v*.*.*'
@@ -64,7 +63,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_release_rules: 'hotfix:patch,major:major,release:major'
+          custom_release_rules: 'hotfix:patch,patch:patch,minor:minor,feature:minor,major:major,release:major'
       - name: Get base semantic version
         id: base_semantic_version
         run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV        
