--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - dev
     tags:
-      - 'v*.*.*'
+      - "v*.*.*"
   pull_request:
     branches: ["main"]
 
@@ -56,17 +56,26 @@ jobs:
     needs: [build-backend, build-frontend]
     runs-on: ubuntu-latest
     env:
-      BASE_SEMANTIC_VERSION: ''
+      BASE_SEMANTIC_VERSION: ""
     steps:
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_release_rules: 'hotfix:patch,patch:patch,minor:minor,feature:minor,major:major,release:major'
+          custom_release_rules: |
+            bug:patch:Bug Fix,
+            chore:patch:Chore,
+            feat:patch:Feature,
+            perf:patch:Performance,
+            ci:patch:Continuous Integration,
+            docs:patch:Documentation,
+            style:patch:Code Style,
+            refactor:patch:Refactoring,
+            test:patch:Tests,
       - name: Get base semantic version
         id: base_semantic_version
-        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV        
+        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
