--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,17 +64,16 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_release_rules: |
-            bug:patch:Bug Fix,
-            chore:patch:Chore,
-            feat:minor:Feature,
-            perf:major:Performance,
-            ci:patch:Continuous Integration,
-            docs:patch:Documentation,
-            style:patch:Code Style,
-            refactor:patch:Refactoring,
-            test:patch:Tests,
+            bug:patch,
+            chore:patch,
+            feat:minor,
+            perf:major,
+            ci:patch,
+            docs:patch,
+            style:patch,
+            refactor:patch,
+            test:patch,
       - name: Get base semantic version
-        id: base_semantic_version
         run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
