--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -53,7 +53,7 @@ jobs:
           npm run build
 
   publish:
-    needs: [build-backend, build-frontend]
+    #needs: [build-backend, build-frontend]
     runs-on: ubuntu-latest
     env:
       BASE_SEMANTIC_VERSION: ""
@@ -78,10 +78,10 @@ jobs:
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
-          tag: ${{ env.BASE_SEMANTIC_VERSION }}
-          name: Release ${{ env.BASE_SEMANTIC_VERSION }}
-      - name: Checkout
-        uses: actions/checkout@v4
+          #tag: ${{ env.BASE_SEMANTIC_VERSION }}
+          #name: Release ${{ env.BASE_SEMANTIC_VERSION }}
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
       - name: Login to Docker Hub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -95,9 +95,8 @@ jobs:
           images: |
             rofeit00/todo-backend
           tags: |
-            type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
-            type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}.{{patch}}
+            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
       - name: Docker meta for frontend
         id: meta_frontend
         uses: docker/metadata-action@v5
@@ -105,18 +104,27 @@ jobs:
           images: |
             rofeit00/todo-frontend
           tags: |
-            type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
-            type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}.{{patch}}
+            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
           tags: ${{ steps.meta_backend.outputs.tags }}
+          labels: ${{ steps.meta_backend.outputs.tags }}
+          build-args: |
+            BUILDTIME=${{ fromJSON(steps.meta_backend.outputs.json).labels['org.opencontainers.image.created'] }}
+            VERSION=${{ fromJSON(steps.meta_backend.outputs.json).labels['org.opencontainers.image.version'] }}
+            REVISION=${{ fromJSON(steps.meta_backend.outputs.json).labels['org.opencontainers.image.revision'] }}
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           push: true
           tags: ${{ steps.meta_frontend.outputs.tags }}
+          labels: ${{ steps.meta_frontend.outputs.tags }}
+          build-args: |
+            BUILDTIME=${{ fromJSON(steps.meta_frontend.outputs.json).labels['org.opencontainers.image.created'] }}
+            VERSION=${{ fromJSON(steps.meta_frontend.outputs.json).labels['org.opencontainers.image.version'] }}
+            REVISION=${{ fromJSON(steps.meta_frontend.outputs.json).labels['org.opencontainers.image.revision'] }}
