--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -68,7 +68,6 @@ jobs:
             chore:patch,
             feat:minor,
             perf:major,
-            ci:patch,
             docs:patch,
             style:patch,
             refactor:patch,
@@ -95,8 +94,10 @@ jobs:
           images: |
             rofeit00/todo-backend
           tags: |
-            type=semver,pattern={{major}}.{{minor}}.{{patch}}
-            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
+            type=pep440,pattern={{version}}
+            type=match,pattern=\d.\d.\d
+#            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+#            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
       - name: Docker meta for frontend
         id: meta_frontend
         uses: docker/metadata-action@v5
@@ -104,8 +105,10 @@ jobs:
           images: |
             rofeit00/todo-frontend
           tags: |
-            type=semver,pattern={{major}}.{{minor}}.{{patch}}
-            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
+            type=pep440,pattern={{version}}
+            type=match,pattern=\d.\d.\d
+#            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+#            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
