--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -72,7 +72,7 @@ jobs:
             refactor:patch,
             test:patch,
       - name: Get base semantic version
-        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
+        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_version }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
@@ -95,8 +95,7 @@ jobs:
           tags: |
             
             type=pep440,pattern={{version}}
-#            type=semver,pattern={{major}}.{{minor}}.{{patch}}
-#            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
+            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
       - name: Docker meta for frontend
         id: meta_frontend
         uses: docker/metadata-action@v5
@@ -105,8 +104,7 @@ jobs:
             rofeit00/todo-frontend
           tags: |
             type=pep440,pattern={{version}}
-#            type=semver,pattern={{major}}.{{minor}}.{{patch}}
-#            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
+            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
