--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -63,14 +63,16 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          tag_prefix: "v"
+          release_branches: "main"
           custom_release_rules: |
-            bug:patch,
-            feat:minor,
-            perf:major,
-            docs:patch,
-            style:patch,
-            refactor:patch,
-            test:patch,
+            bug=patch,
+            feat=minor,
+            perf=major,
+            docs=patch,
+            style=patch,
+            refactor=patch,
+            test=patch,
       - name: Get base semantic version
         run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_version }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
       - name: Create a GitHub release
@@ -110,7 +112,9 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: ${{ steps.meta_backend.outputs.tags }}
+          tags: |
+            ${{ steps.tag_version.outputs.new_tag }}
+            latest
           labels: ${{ steps.meta_backend.outputs.tags }}
           build-args: |
             BUILDTIME=${{ fromJSON(steps.meta_backend.outputs.json).labels['org.opencontainers.image.created'] }}
@@ -121,7 +125,9 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: ${{ steps.meta_frontend.outputs.tags }}
+          tags: |
+            ${{ steps.tag_version.outputs.new_tag }}
+            latest
           labels: ${{ steps.meta_frontend.outputs.tags }}
           build-args: |
             BUILDTIME=${{ fromJSON(steps.meta_frontend.outputs.json).labels['org.opencontainers.image.created'] }}
