--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -53,7 +53,7 @@ jobs:
           npm run build
 
   publish:
-    #needs: [build-backend, build-frontend]
+    needs: [build-backend, build-frontend]
     runs-on: ubuntu-latest
     env:
       BASE_SEMANTIC_VERSION: ""
@@ -65,18 +65,10 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           tag_prefix: "v"
           release_branches: "main"
-          custom_release_rules: |
-            bug=patch,
-            feat=minor,
-            perf=major,
-            docs=patch,
-            style=patch,
-            refactor=patch,
-            test=patch,
       - name: Get base semantic version
         run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_version }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
       - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
+        uses: ncipollo/release-action@v1.13.0
         with:
           #tag: ${{ env.BASE_SEMANTIC_VERSION }}
           #name: Release ${{ env.BASE_SEMANTIC_VERSION }}
