--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -105,23 +105,13 @@ jobs:
           context: ./backend
           push: true
           tags: |
-            ${{ steps.tag_version.outputs.new_tag }}
+            ${{ steps.tag_version.outputs.new_version }}
             latest
-          labels: ${{ steps.meta_backend.outputs.tags }}
-          build-args: |
-            BUILDTIME=${{ fromJSON(steps.meta_backend.outputs.json).labels['org.opencontainers.image.created'] }}
-            VERSION=${{ fromJSON(steps.meta_backend.outputs.json).labels['org.opencontainers.image.version'] }}
-            REVISION=${{ fromJSON(steps.meta_backend.outputs.json).labels['org.opencontainers.image.revision'] }}
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           push: true
           tags: |
-            ${{ steps.tag_version.outputs.new_tag }}
+            ${{ steps.tag_version.outputs.new_version }}
             latest
-          labels: ${{ steps.meta_frontend.outputs.tags }}
-          build-args: |
-            BUILDTIME=${{ fromJSON(steps.meta_frontend.outputs.json).labels['org.opencontainers.image.created'] }}
-            VERSION=${{ fromJSON(steps.meta_frontend.outputs.json).labels['org.opencontainers.image.version'] }}
-            REVISION=${{ fromJSON(steps.meta_frontend.outputs.json).labels['org.opencontainers.image.revision'] }}
