--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -63,15 +63,25 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag_prefix: "v"
-          release_branches: "main"
+          custom_release_rules: |
+            bug:patch:Bug Fix,
+            chore:patch:Chore,
+            feat:minor:Feature,
+            perf:major:Performance,
+            ci:patch:Continuous Integration,
+            docs:patch:Documentation,
+            style:patch:Code Style,
+            refactor:patch:Refactoring,
+            test:patch:Tests,
       - name: Get base semantic version
-        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_version }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
+        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
       - name: Create a GitHub release
-        uses: ncipollo/release-action@v1.13.0
+        uses: ncipollo/release-action@v1
         with:
           tag: ${{ env.BASE_SEMANTIC_VERSION }}
           name: Release ${{ env.BASE_SEMANTIC_VERSION }}
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Login to Docker Hub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -85,9 +95,9 @@ jobs:
           images: |
             rofeit00/todo-backend
           tags: |
-            type=raw, value=${{ env.BASE_SEMANTIC_VERSION }}
-            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
-#            type=pep440,pattern={{version}}
+            type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
       - name: Docker meta for frontend
         id: meta_frontend
         uses: docker/metadata-action@v5
@@ -95,21 +105,18 @@ jobs:
           images: |
             rofeit00/todo-frontend
           tags: |
-            type=raw, value=${{ env.BASE_SEMANTIC_VERSION }}
-            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
+            type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
-          tags: |
-            ${{ env.BASE_SEMANTIC_VERSION }}
-            latest
+          tags: ${{ steps.meta_backend.outputs.tags }}
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           push: true
-          tags: |
-            ${{ env.BASE_SEMANTIC_VERSION }}
-            latest
+          tags: ${{ steps.meta_frontend.outputs.tags }}
