--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - dev
     tags:
-      - "v*.*.*"
+      - "v*.*"
   pull_request:
     branches: ["main"]
 
@@ -58,30 +58,32 @@ jobs:
     env:
       BASE_SEMANTIC_VERSION: ""
     steps:
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.1
+      - uses: actions/checkout@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_release_rules: |
-            bug:patch:Bug Fix,
-            chore:patch:Chore,
-            feat:minor:Feature,
-            perf:major:Performance,
-            ci:patch:Continuous Integration,
-            docs:patch:Documentation,
-            style:patch:Code Style,
-            refactor:patch:Refactoring,
-            test:patch:Tests,
+          ref: ${{ github.event.pull_request.merge_commit_sha }}
+          fetch-depth: '0'
+        
+#      - name: Bump version and push tag
+#        id: tag_version
+#        uses: mathieudutour/github-tag-action@v6.1
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.67.0
+        id: tag_version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: false
+
       - name: Get base semantic version
-        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
+#        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
+        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} >> $GITHUB_ENV
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ env.BASE_SEMANTIC_VERSION }}
           name: Release ${{ env.BASE_SEMANTIC_VERSION }}
-      - name: Checkout
-        uses: actions/checkout@v4
       - name: Login to Docker Hub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -113,10 +115,14 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: ${{ steps.meta_backend.outputs.tags }}
+          tags: |
+            ${{ steps.meta_backend.outputs.tags }}
+            latest
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           push: true
-          tags: ${{ steps.meta_frontend.outputs.tags }}
+          tags: |
+            ${{ steps.meta_frontend.outputs.tags }}
+            latest
