--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Get base semantic version
 #        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
-        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} >> $GITHUB_ENV
+        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }}) >> $GITHUB_ENV
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
