--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -97,8 +97,8 @@ jobs:
             rofeit00/todo-backend
           tags: |
             type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+#            type=semver,pattern={{version}}
+#            type=semver,pattern={{major}}.{{minor}}.{{patch}}
       - name: Docker meta for frontend
         id: meta_frontend
         uses: docker/metadata-action@v5
@@ -107,8 +107,8 @@ jobs:
             rofeit00/todo-frontend
           tags: |
             type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+#            type=semver,pattern={{version}}
+#            type=semver,pattern={{major}}.{{minor}}.{{patch}}
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
@@ -116,7 +116,7 @@ jobs:
           push: true
           tags: |
             ${{ steps.meta_backend.outputs.tags }}
-            latest
+            rofeit00/todo-backend:latest
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
@@ -124,4 +124,4 @@ jobs:
           push: true
           tags: |
             ${{ steps.meta_frontend.outputs.tags }}
-            latest
+            rofeit00/todo-frontend:latest
