--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,10 +4,6 @@ on:
   push:
     branches:
       - dev
-    tags:
-      - "v*.*"
-  pull_request:
-    branches: ["main"]
 
 jobs:
   build-backend:
@@ -28,13 +24,36 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build Backend
         working-directory: ./backend
-        run: mvn clean install
+        run: mvn clean package -DskipTests
+
+  test-backend:
+    needs: build-backend
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Java
+        uses: actions/setup-java@v3.13.0
+        with:
+          distribution: "adopt"
+          java-version: "17"
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3.3.2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Test Backend
+        working-directory: ./backend
+        run: mvn test
 
   build-frontend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
       - name: Setup Node.js
         uses: actions/setup-node@v4.0.0
         with:
@@ -45,83 +64,33 @@ jobs:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: ${{ runner.os }}-node
-      - name: Build and Test Frontend
+      - name: Install dependencies
+        working-directory: ./frontend
+        run: npm ci
+      - name: Build Frontend
+        working-directory: ./frontend
+        run: npm run build
+
+  test-frontend:
+    needs: build-frontend
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+      - name: Setup Node.js
+        uses: actions/setup-node@v4.0.0
+        with:
+          node-version: 18
+      - name: Cache Node.js modules
+        uses: actions/cache@v3.3.2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-node
+      - name: Test Frontend
         working-directory: ./frontend
         run: |
-          npm install
+          npm ci
           npm run test
-          npm run build
-
-  publish:
-    needs: [build-backend, build-frontend]
-    runs-on: ubuntu-latest
-    env:
-      BASE_SEMANTIC_VERSION: ""
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.merge_commit_sha }}
-          fetch-depth: '0'
-        
-#      - name: Bump version and push tag
-#        id: tag_version
-#        uses: mathieudutour/github-tag-action@v6.1
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.67.0
-        id: tag_version
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WITH_V: true
-      - name: Get base semantic version
-#        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }} | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+).*/\1/')" >> $GITHUB_ENV
-        run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }})" >> $GITHUB_ENV
-      - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ env.BASE_SEMANTIC_VERSION }}
-          name: Release ${{ env.BASE_SEMANTIC_VERSION }}
-      - name: Login to Docker Hub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
-          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-      - name: Docker meta for backend
-        id: meta_backend
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            rofeit00/todo-backend
-          tags: |
-            type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
-#            type=semver,pattern={{version}}
-#            type=semver,pattern={{major}}.{{minor}}.{{patch}}
-      - name: Docker meta for frontend
-        id: meta_frontend
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            rofeit00/todo-frontend
-          tags: |
-            type=raw,value=${{ env.BASE_SEMANTIC_VERSION }}
-#            type=semver,pattern={{version}}
-#            type=semver,pattern={{major}}.{{minor}}.{{patch}}
-      - name: Build and push backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: true
-          tags: |
-            ${{ steps.meta_backend.outputs.tags }}
-            rofeit00/todo-backend:latest
-      - name: Build and push frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          push: true
-          tags: |
-            ${{ steps.meta_frontend.outputs.tags }}
-            rofeit00/todo-frontend:latest
