--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -66,7 +66,7 @@ jobs:
           restore-keys: ${{ runner.os }}-node
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm ci
+        run: npm install -g codecov
       - name: Build Frontend
         working-directory: ./frontend
         run: npm run build
@@ -92,5 +92,6 @@ jobs:
       - name: Test Frontend
         working-directory: ./frontend
         run: |
+          npm install -g codecov
           npm ci
           npm run test
