--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -66,7 +66,7 @@ jobs:
           restore-keys: ${{ runner.os }}-node
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm install -g codecov
+        run: npm install
       - name: Build Frontend
         working-directory: ./frontend
         run: npm run build
@@ -92,6 +92,6 @@ jobs:
       - name: Test Frontend
         working-directory: ./frontend
         run: |
-          npm install -g codecov
+          npm install
           npm ci
           npm run test
