--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -62,6 +62,7 @@ jobs:
         uses: actions/setup-node@v4.0.0
         with:
           node-version: 18
+          cache: 'npm'
       - name: Cache Node.js modules
         uses: actions/cache@v3.3.2
         with:
@@ -87,6 +88,7 @@ jobs:
         uses: actions/setup-node@v4.0.0
         with:
           node-version: 18
+          cache: 'npm'
       - name: Cache Node.js modules
         uses: actions/cache@v3.3.2
         with:
@@ -96,6 +98,5 @@ jobs:
       - name: Test Frontend
         working-directory: ./frontend
         run: |
-          npm install
           npm ci
-          npm run test
+          npm test
