--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,6 +16,8 @@
 	<description>Todolist App</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>robertfeo</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 
