--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,9 @@ jobs:
           WITH_V: true
           RELEASE_BRANCHES: main
           INITIAL_VERSION: 0.0.0
+          MAJOR_STRING_TOKEN: major
+          MINOR_STRING_TOKEN: minor
+          PATCH_STRING_TOKEN: patch
       - name: Get base semantic version
         run: echo "BASE_SEMANTIC_VERSION=$(echo ${{ steps.tag_version.outputs.new_tag }})" >> $GITHUB_ENV
       - name: Create a GitHub release
@@ -71,3 +74,7 @@ jobs:
           tags: |
             ${{ steps.meta_frontend.outputs.tags }}
             rofeit00/todo-frontend:latest
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
